examples/test/testpolicy7183.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7183
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key40: value41
      key29: value23
      key0: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value11
          key33: value43
          key42: value45
      podSelector:
        matchLabels:
          key24: value22
